@@ -40,35 +40,26 @@
 		<label id="jform_plugname-lbl" class="required" for="jform_plugname"><?php echo JText::_( 'Name' ); ?>:</label>
 		<input id="jform_plugname" class="inputbox" type="text" size="35" value="<?php echo $this->plugin->name; ?>" name="jform[plugname]"/>
 		
-		<div class="paramrow clrlft">		
-			<label id="jform_plugenabled-lbl" class="" for="jform_plugenabled"><?php echo JText::_( 'JEnabled' ); ?>:</label>
+				
+		<label id="jform_plugenabled-lbl" class="" for="jform_plugenabled"><?php echo JText::_( 'JEnabled' ); ?>:</label>
+		<fieldset id="jform_plugenabled" class="radio">
 			<?php echo $this->lists['enabled']; ?>
-		</div>
+		</fieldset>
 		
-		<div class="paramrow clrlft">
-			<label id="jform_plugtype-lbl" class="" for="jform_plugtype"><?php echo JText::_( 'Type' ); ?>:</label>
-			<input id="jform_plugtype" class="readonly" type="text" readonly="readonly" size="16" value="<?php echo $this->plugin->folder; ?>" name="jform[plugtype]"/>
-		</div>
+		<label id="jform_plugtype-lbl" class="" for="jform_plugtype"><?php echo JText::_( 'Type' ); ?>:</label>
+		<input id="jform_plugtype" class="readonly" type="text" readonly="readonly" size="16" value="<?php echo $this->plugin->folder; ?>" name="jform[plugtype]"/>
 		
-		<div class="paramrow clrlft">
-			<label id="jform_plugfile-lbl" class="" for="jform_plugfile"><?php echo JText::_( 'Plugin file' ); ?>:</label>
-			<input id="jform_plugfile" class="readonly" type="text" readonly="readonly" size="25" value="<?php echo $this->plugin->element; ?>.php" name="jform[plugfile]"/>
-		</div>
+		<label id="jform_plugfile-lbl" class="" for="jform_plugfile"><?php echo JText::_( 'Plugin file' ); ?>:</label>
+		<input id="jform_plugfile" class="readonly" type="text" readonly="readonly" size="25" value="<?php echo $this->plugin->element; ?>.php" name="jform[plugfile]"/>
 		
-		<div class="paramrow clrlft">
-			<label id="jform_plugaccess-lbl" class="" for="jform_plugaccess"><?php echo JText::_( 'Access Level' ); ?>:</label>
-			<?php echo $this->lists['access']; ?>
-		</div>
+		<label id="jform_plugaccess-lbl" class="" for="jform_plugaccess"><?php echo JText::_( 'Access Level' ); ?>:</label>
+		<?php echo $this->lists['access']; ?>
 		
-		<div class="paramrow clrlft">
-			<label id="jform_plugorder-lbl" class="" for="jform_plugorder"><?php echo JText::_( 'Order' ); ?>:</label>
-			<?php echo $this->lists['ordering']; ?>
-		</div>
+		<label id="jform_plugorder-lbl" class="" for="jform_plugorder"><?php echo JText::_( 'Order' ); ?>:</label>
+		<?php echo $this->lists['ordering']; ?>
 		
-		<div class="paramrow clrlft">
-			<label id="jform_plugdesc-lbl" class="" for="jform_plugdesc"><?php echo JText::_( 'Description' ); ?>:</label>
-			<p><?php echo JText::_( $this->plugin->description ); ?></p>
-		</div>
+		<label id="jform_plugdesc-lbl" class="" for="jform_plugdesc"><?php echo JText::_( 'Description' ); ?>:</label>
+		<p class="jform_desc"><?php echo JText::_( $this->plugin->description ); ?></p>
 	
 	</fieldset>
 </div>
@@ -79,7 +70,7 @@
 		echo $pane->startPane('plugin-pane');
 		echo $pane->startPanel(JText :: _('Plugin Parameters'), 'param-page');
 		if($output = $this->params->render('params')) :
-			echo "<fieldset class='panelform'>".$output."</fieldset>";
+			echo "<fieldset class='panelform-legacy'>".$output."</fieldset>";
 		else :
 			echo "<div class=\"noparams-notice\">".JText::_('There are no parameters for this item')."</div>";
 		endif;
@@ -88,7 +79,7 @@
 		if ($this->params->getNumParams('advanced')) {
 			echo $pane->startPanel(JText :: _('Advanced Parameters'), "advanced-page");
 			if($output = $this->params->render('params', 'advanced')) :
-				echo "<fieldset class='panelform'>".$output."</fieldset>";
+				echo "<fieldset class='panelform-legacy'>".$output."</fieldset>";
 			else :
 				echo "<div class=\"noparams-notice\">".JText::_('There are no advanced parameters for this item')."</div>";
 			endif;
