@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 13-Oct-2009 Ron Severdia
 # CSS and UI fixes for JForm radio button changes.
+# UI fixes with new JForm class
 
 13-Oct-2009 Andrew Eddie
 ^ Reverse the order of Publisher, Editor and Author groups to match admin groups direction.
